--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.8.0",
+    "recharts": "^3.5.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
